--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     <div class="container-normal">
         <div class="card-white" id="introduction">
-            <h1>Hello, I'm a programming duck! 🦆</h1>
+            <h1>Hello, I'm a coding duck! 🦆</h1>
             <img src="images/duck-flower.gif" class="img-circle" width="100px" alt="Flower Duck">
             <p>I love music, yoga and climbing 🧗🏻</p>
-            <p>Right now I'm a therapeutic counselor, but working towards being a programmer 👾</p>
+            <p>Yoga teacher and Reiki therapist, working towards being a developer 👾</p>
             <div class="button">
                 <a href="https://c.tenor.com/3YeFSzC3p5gAAAAd/happy-duck.gif"><input type="button" value="Duck Me!"/></a>
             </div>
@@ -29,24 +29,28 @@
             <h2>My favorite bands <i class="fas fa-music"></i> </h2>
                 <p>Godspeed You! Black Emperor</p>
                 <p>Invisible</p>
-                <p>Aquelarre</p>
-                <p>This will destroy you</p>
-                <p>Explosions in the sky</p>
+                <p>Snarky Puppy</p>
+                <p>TOOL</p>
+                <p>Pescado Rabioso</p>
         </div>
         <div class="card-white" id="movies">
             <h2>My favorite movies <i class="fas fa-film"></i></h2>
-                <p>2001 A Space Odyssey</p>
-                <p>Mother</p>
-                <p>Laurence Anyways</p>
-                <p>Akira</p>
-                <p>Meshes of the Afternoon</p>
+            <ul>
+                <li><img src="images/akira.png" alt="Akira" width="370" height="208"></li>
+                <li> <img src="images/ran.png" alt="Ran" width="370" height="208"></li>
+                <li> <img src="images/paris.png" alt="Paris, Texas" width="370" height="208"></li>
+                <li> <img src="images/mother.png" alt="Mother" width="370" height="208"></li>
+                <li> <img src="images/stalker.png" alt="Stalker" width="370" height="208"></li>
+            </ul>
         </div>
         <div class="card-white" id="social-media links">
             <h2>You can follow me on these thingies</h2>
             <a href="https://open.spotify.com/user/1189590926?si=bcaab26846cf4a80"><p>Here's my Spotify <i class="fab fa-spotify"></i></p></a>
             <a href="https://github.com/Blarsamio"><p>Here's my GitHub <i class="fab fa-github"></i></p></a>
+            <a href="https://mubi.com/users/10400957"><p>Here's my Mubi <i class="fas fa-film"></i></p></a>
             <a href="https://www.google.com/maps/@-27.0817817,-65.4204775,47m/data=!3m1!1e3"><p>Here's my Grandma's Address <i class="fas fa-home"></i></p></a>
         </div>
     </div>
 </body>
 </html>
+
